# CircuitPython_DS1302

./: .gitignore  README.rst  ds1302.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: ds1302_ram.py  ds1302_simpletest.py  ds1302_trickle.py
