# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2026 Avery Ramsey
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-ds1302"
description = "CircuitPython driver for the Maxim Integrated / Analog Devices DS1302 Real Time Clock."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Avery Ramsey", email = "averycoleramsey@gmail.com"}
]
urls = {Homepage = "https://github.com/Elfking29/CircuitPython_DS1302"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "ds1302",
    "real",
    "time",
    "clock",
    "rtc",
    "real-time",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["ds1302"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
